# fido2luks

./: .drone.yml  .gitignore  CHANGELOG.md  Cargo.toml  PKGBUILD  README.md  build.rs  fido2luks.conf  fido2luks.spec  flake.nix
.copr/: Makefile
.github/workflows/: current.yml  locked.yml
.rpm/: fido2luks.spec
.tito/: releasers.conf
dracut/: Makefile  README.md  crypt-lib.sh  crypt-lib.sh.patch  dracut-crypt-fido2-lib.sh  fido2luks.sh  module-setup.sh  ykluks.sh
dracut/96luks-2fa/: fido2-connected.service  fido2luks.conf  luks-2fa-generator.sh  luks-2fa.conf  luks-2fa.target  module-setup.sh
dracut/dracut.conf.d/: luks-2fa.conf
initcpio/: Makefile  README.md  fido2luks.conf
initcpio/hooks/: fido2luks
initcpio/install/: fido2luks
initramfs-tools/: Dockerfile  Makefile  README.md  build-deb.sh  fido2luks.conf  keyscript.sh
initramfs-tools/hook/: fido2luks.sh
pam_mount/: fido2luksmounthelper.sh
patch/cryptsetup-rs/: .gitignore  .travis.yml  Cargo.toml  README.md  rustfmt.toml
patch/cryptsetup-rs/blkid-rs/: Cargo.toml
patch/cryptsetup-rs/blkid-rs/src/: lib.rs
patch/cryptsetup-rs/examples/: luks_dump.rs
patch/cryptsetup-rs/libcryptsetup-sys/: Cargo.toml  build.rs  lib.rs
patch/cryptsetup-rs/src/: api.rs  device.rs  lib.rs
patch/cryptsetup-rs/tests/: tests.rs
patch/ctap/: .gitignore  Cargo.toml  README.md
patch/ctap/src/: LICENSE-MIT  cbor.rs  crypto.rs  error.rs  hid_common.rs  hid_linux.rs  lib.rs  packet.rs
patch/ctap/src/extensions/: hmac.rs
src/: cli.rs  cli_args.rs  config.rs  device.rs  error.rs  keystore.rs  luks.rs  main.rs  util.rs
src/cli/: cli_args.rs  mod.rs
src/cli_args/: config.rs  mod.rs
